<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_cart"/>
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/status"
        android:icon="@drawable/ic_action_status"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/favorites"
        android:icon="@drawable/ic_action_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_date_picker"
        android:orderInCategory="110"
        android:title="@string/date"
        app:showAsAction="never" />
</menu>